--- a/rol-companion/Dockerfile
+++ b/rol-companion/Dockerfile
@@ -1,5 +1,5 @@
 FROM eclipse-temurin:24-jdk-alpine
 WORKDIR /app
-COPY target/rol-companion-0.0.1-SNAPSHOT.jar app.jar
+COPY target/rol-companion-0.0.1.jar app.jar
 EXPOSE 8080
 CMD ["java", "-jar", "app.jar"]
